--- a/DeviceManagerUITest/src/app/home-page/home-page.component.html
+++ b/DeviceManagerUITest/src/app/home-page/home-page.component.html
@@ -8,9 +8,9 @@
 
 
         <div class="col">
-            <div class="card" style="max-height:700px;overflow-y:scroll;overflow:scroll">
+            <!-- <div class="card" style="max-height:700px;overflow-y:scroll;"> -->
                 
-            <table class="table table-bordered" >
+            <table class="table table-bordered" style="max-height:700px;overflow-y:scroll;" >
                 <thead>
                     <tr>
                         <th scope="col">Device</th>
@@ -56,7 +56,7 @@
 
 
             </table>
-            </div>
+            <!-- </div> -->
             <!-- DeviceTable Column -->
         </div>
 
